# Generic_Word_Clock

./: .gitignore  README.md
documentation/: firmware_design.drawio
electronics/: ESP32C3_WordClock_BOM.csv  README.md
electronics/Gerbers/: ESP32C3_WordClock-B_Cu.gbl  ESP32C3_WordClock-B_Mask.gbs  ESP32C3_WordClock-B_Paste.gbp  ESP32C3_WordClock-B_Silkscreen.gbo  ESP32C3_WordClock-Edge_Cuts.gm1  ESP32C3_WordClock-F_Cu.gtl  ESP32C3_WordClock-F_Mask.gts  ESP32C3_WordClock-F_Paste.gtp  ESP32C3_WordClock-F_Silkscreen.gto  ESP32C3_WordClock-NPTH.drl  ESP32C3_WordClock-PTH.drl
esp32-c3-web/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32-c3-web/components/i2c_manager/: CMakeLists.txt
esp32-c3-web/components/i2c_manager/i2c_manager/: i2c_manager.c
esp32-c3-web/components/wifi/: CMakeLists.txt  Kconfig.projbuild  lib_connect.c  lib_connect.h
esp32-c3-web/main/: CMakeLists.txt  ESP_RGB.c  ESP_RGB.h  Kconfig.projbuild  button.c  button.h  cfg_clock.c  cfg_clock.h  lib_includes.h  lib_messaging.c  lib_messaging.h  lib_timer.c  lib_timer.h  lib_types.h  main.c  networking.c  networking.h  rgb_rmt.c  rgb_rmt.h  rtc.c  rtc.h  task_device.c  task_device.h  task_display.c  task_display.h  task_network.c  task_network.h
mechanical/: Generic_Backplate.STEP  Generic_Body_NoText.STEP  Generic_Body_NoText.STL  Generic_Divider.STEP  Generic_Support_BoardHolder.STEP  Generic_Support_WallMount.STEP  README.md  make_clock.py  make_clock_body.scad  make_clock_body_characters.txt  parts_list.csv
