idf_component_register(
    SRCS 
        "button.c"
        "lib_messaging.c"
        "rtc.c"
        "task_network.c"
        "task_device.c"
        "rgb_rmt.c"
        "task_display.c"
        "cfg_clock.c"
        "lib_timer.c"
        "main.c"
        "networking.c"
                    
    INCLUDE_DIRS "."
)
